force-app/main/default/objects/Account/fields/QuickBooks_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Customer_Id__c</fullName>
    <label>QuickBooks Customer Id</label>
    <type>Text</type>
    <length>30</length>
    <externalId>true</externalId>
</CustomField>