force-app/main/default/objects/Account/fields/QuickBooks_Customer_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Customer_SyncToken__c</fullName>
    <label>QuickBooks Customer SyncToken</label>
    <type>Text</type>
    <length>10</length>
</CustomField>