force-app/main/default/objects/Account/fields/QuickBooks_Email__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Email__c</fullName>
    <label>QuickBooks Email</label>
    <type>Email</type>
</CustomField>